k8s/default/website.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: meetings-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.netsoc.ie/meeting/?$'
    replacement: 'https://tcd-ie.zoom.us/j/97182874403?pwd=ZW9CSHdEZTVRSWVOMmZsU3hsbVRwdz09'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: events-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.netsoc.ie/event/?$'
    replacement: 'https://tcd-ie.zoom.us/j/91778973809?pwd=K3B0dGtOdlJMRHJEY3RSNjBDSllaZz09'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cli-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.netsoc.ie/cli/?$'
    replacement: 'https://github.com/netsoc/cli/releases/latest'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: agm-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://www.netsoc.ie/agm/?$'
    replacement: https://tcd-ie.zoom.us/j/92587206850?pwd=WmZ3aDVnV2JhVlFpdkRQTDY5eDdFZz09'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: www-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://netsoc.ie/(.*)'
    replacement: 'https://www.netsoc.ie/${1}'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: www-redirect
  namespace: default
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`netsoc.ie`)
    kind: Rule
    services:
    - name: noop@internal
      kind: TraefikService
    middlewares:
    - name: www-redirect
      namespace: default
  tls:
    secretName: tls-main
    domains:
    - main: 'netsoc.ie'
      sans:
      - '*.netsoc.ie'
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tcd-redirect
  namespace: default
spec:
  redirectRegex:
    regex: '^https://(.*)netsoc.tcd.ie/(.*)'
    replacement: 'https://${1}netsoc.ie/${2}'
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tcd-redirect
  namespace: default
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`netsoc.tcd.ie`) || Host(`www.netsoc.tcd.ie`)
    kind: Rule
    services:
    - name: noop@internal
      kind: TraefikService
    middlewares:
    - name: tcd-redirect
      namespace: default
  tls:
    secretName: tls-tcd
    domains:
    - main: 'netsoc.tcd.ie'
      sans:
      - '*.netsoc.tcd.ie'
